added basic css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Nick's Portfolio</title>
     
@@ -12,25 +13,54 @@
 
 <body>
     <!-- Navigation -->
-    <nav>
+    <nav id="navbar">
         <div class="container">
-            <ul>
-                <li class="nav-item">
-                    <a href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
+            Nick Wilson
+        </div>
+        <div class="container">
+            <div class="nav-item">
+                <a href="#about">About</a>
+            </div>
+            <div class="nav-item">
+                <a href="#portfolio">Portfolio</a>
+            </div>
+            <div class="nav-item">
+                <a href="#skills">Skills</a>
+            </div>
+            <div class="nav-item">
+                <a href="#contact">Contact</a>
+            </div>
         </div>
     </nav>
 
 
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem risus. Nullam et malesuada ligula. Aenean imperdiet malesuada gravida. Nullam blandit pretium malesuada. Duis massa dui, scelerisque ac tortor non, consectetur posuere nisi. Donec lacus orci, hendrerit id suscipit ut, consequat eleifend diam. Aliquam erat volutpat. In pulvinar quam quis orci luctus, vel tincidunt libero interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra aliquet bibendum. Suspendisse aliquam metus et orci pellentesque, sed efficitur lectus suscipit. Morbi risus nunc, rutrum et sagittis posuere, vulputate sed magna. Vivamus nisl metus, lobortis viverra leo non, consectetur dictum mi.</p>
+        </div>
+    </section>
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem risus. Nullam et malesuada ligula. Aenean imperdiet malesuada gravida. Nullam blandit pretium malesuada. Duis massa dui, scelerisque ac tortor non, consectetur posuere nisi. Donec lacus orci, hendrerit id suscipit ut, consequat eleifend diam. Aliquam erat volutpat. In pulvinar quam quis orci luctus, vel tincidunt libero interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra aliquet bibendum. Suspendisse aliquam metus et orci pellentesque, sed efficitur lectus suscipit. Morbi risus nunc, rutrum et sagittis posuere, vulputate sed magna. Vivamus nisl metus, lobortis viverra leo non, consectetur dictum mi.</p>
+        </div>
+    </section>
+    <!-- Skills Section -->
+    <section id="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem risus. Nullam et malesuada ligula. Aenean imperdiet malesuada gravida. Nullam blandit pretium malesuada. Duis massa dui, scelerisque ac tortor non, consectetur posuere nisi. Donec lacus orci, hendrerit id suscipit ut, consequat eleifend diam. Aliquam erat volutpat. In pulvinar quam quis orci luctus, vel tincidunt libero interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra aliquet bibendum. Suspendisse aliquam metus et orci pellentesque, sed efficitur lectus suscipit. Morbi risus nunc, rutrum et sagittis posuere, vulputate sed magna. Vivamus nisl metus, lobortis viverra leo non, consectetur dictum mi.</p>
+        </div>
+    </section>
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem risus. Nullam et malesuada ligula. Aenean imperdiet malesuada gravida. Nullam blandit pretium malesuada. Duis massa dui, scelerisque ac tortor non, consectetur posuere nisi. Donec lacus orci, hendrerit id suscipit ut, consequat eleifend diam. Aliquam erat volutpat. In pulvinar quam quis orci luctus, vel tincidunt libero interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra aliquet bibendum. Suspendisse aliquam metus et orci pellentesque, sed efficitur lectus suscipit. Morbi risus nunc, rutrum et sagittis posuere, vulputate sed magna. Vivamus nisl metus, lobortis viverra leo non, consectetur dictum mi.</p>
+        </div>
+    </section>
 </body>
 </html>
