small changes to navbar and skills section

--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
                     <span>Vim</span>
             </a>
 
+        </div>
 
-            <h2>Technologies I am interested in learning</h2>
-
+    <h2>Technologies I am interested in learning</h2>
+        <div class="devicon-container">
             <a target="_blank" rel="noopener noreferrer" 
                 href="https://golang.org/"
                      class="skills-icons">
