working on more icons for more technologies

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             </div>
             <div class="nav-right-container">
                 <div class="nav-right-menu">
-                    <div class="nav-item">
+                    <div class="nav-item nav-button">
                         <a href="#about">About</a>
                     </div>
-                    <div class="nav-item">
+                    <div class="nav-item nav-button">
                         <a href="#portfolio">Portfolio</a>
                     </div>
-                    <div class="nav-item">
+                    <div class="nav-item nav-button">
                         <a href="#skills">Skills</a>
                     </div>
-                    <div class="nav-item">
+                    <div class="nav-item nav-button">
                         <a href="#contact">Contact</a>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
     <section id="about">
         <div class="container">
             <h2>About</h2>
-            <p>Hello I'm Nick. When</p>
+            <p>Hello I'm Nick. I am a full stack software developer in Atlanta. When not developing software I enjoy playing guitar and trying to keep up with all the Marvel movies that are coming out.</p>
         </div>
     </section>
     <!-- Portfolio Section -->
@@ -149,8 +149,26 @@
                     <span>Go</span>
             </a>
 
+            <a target="_blank" rel="noopener noreferrer" 
+                href="https://d3js.org/"
+                     class="skills-icons">
+                <i class="devicon-d3js-plain devicon"></i>
+                    <span>D3.js</span>
+            </a>
 
+            <a target="_blank" rel="noopener noreferrer" 
+                href="https://reactjs.org/"
+                     class="skills-icons">
+                <i class="devicon-react-original devicon"></i>
+                    <span>React</span>
+            </a>
 
+            <!-- straight svg not devicons -->
+
+            <a target="_blank" rel="noopener noreferrer"
+                href="https://www.rust-lang.org/"
+                    class="skills-icons">
+                <svg
         </div>
     </section>
     <!-- Contact Section -->
@@ -159,15 +177,19 @@
             <h2>Contact</h2>
             <p>I would like to connect with you. You can reach me via email or LinkedIn. Also feel free to check out my GitHub account to see more of my projects, or download my resume.</p>
             <div class="contact-buttons">
-                <a href="mailto:logikfx@gmail.com">
+                
+                <a href="mailto:logikfx@gmail.com"
+                    class="contact-button">
                     <img src="img/mail-button.svg">
                 </a>
 
-                <a href="https://www.linkedin.com/in/nickwilson2/">
+                <a href="https://www.linkedin.com/in/nickwilson2/"
+                    class="contact-button">
                     <img src="img/linkedin-button.svg">
                 </a>
 
-                <a href="https://github.com/NickWilsonDev">
+                <a href="https://github.com/NickWilsonDev"
+                    class="contact-button">
                     <img src="img/github.svg">
                 </a>
 
