small decorative changes to navbar buttons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </div>
         </div>
     </nav>
+    <div> </div>
+    <div> </div>
     <!-- About Section -->
     <section id="about">
         <div class="container">
