working on styling

--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
     <div> </div>
     <!-- About Section -->
     <section id="about">
-        <div class="container">
-            <h2>About</h2>
+        <div class="about-left">
+            <img class="profile-pic" src="img/Nic.jpg">
+        </div>
+        <div class="about-right">
+            <h2>About Me</h2>
             <p>Hello I'm Nick. I am a full stack software developer in Atlanta. When not developing software I enjoy playing guitar and trying to keep up with all the Marvel movies that are coming out.</p>
+            <ul>
+                <li><a class="shortcut-button" href="#portfolio">My Work</a></li>
+                <li><a class="shortcut-button" href="#contact">Contact Me</a></li>
+            </ul>
         </div>
     </section>
     <!-- Portfolio Section -->
