added cards to portfolio section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
     <section id="portfolio">
         <div class="container">
             <h2>Portfolio</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem risus. Nullam et malesuada ligula. Aenean imperdiet malesuada gravida. Nullam blandit pretium malesuada. Duis massa dui, scelerisque ac tortor non, consectetur posuere nisi. Donec lacus orci, hendrerit id suscipit ut, consequat eleifend diam. Aliquam erat volutpat. In pulvinar quam quis orci luctus, vel tincidunt libero interdum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra aliquet bibendum. Suspendisse aliquam metus et orci pellentesque, sed efficitur lectus suscipit. Morbi risus nunc, rutrum et sagittis posuere, vulputate sed magna. Vivamus nisl metus, lobortis viverra leo non, consectetur dictum mi.</p>
+            <div class="card-container">
+                <div class="card">
+                    thiis is a sample card.
+                </div>
+                <div class="card">
+                     sample card 2.
+                </div>
+                <div class="card">
+                    sample card 3.
+                </div>
+                <div class="card">
+                    sample card 4.
+                </div>
+
+            </div>
         </div>
     </section>
     <!------------------  Skills Section ------------------------------->
