working on centering cards on focus

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     thiis is a sample card.
                 </div>
                 <div class="card">
-                     sample card 2.
+                    <img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=439511&type=card">
                 </div>
                 <div class="card">
                     sample card 3.
