stylistic changes to make it more responsive

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h2>About Me</h2>
             <p>Hello I'm Nick. I am a full stack software developer in Atlanta. When not developing software I enjoy playing guitar and trying to keep up with all the Marvel movies that are coming out.</p>
             <ul>
-                <li><a class="shortcut-button" href="#portfolio">My Work</a></li>
-                <li><a class="shortcut-button" href="#contact">Contact Me</a></li>
+                <li class="nav-button"><a href="#portfolio">My Work</a></li>
+                <li class="nav-button"><a href="#contact">Contact Me</a></li>
             </ul>
         </div>
     </section>
@@ -55,7 +55,7 @@
             <h2>Portfolio</h2>
             <div class="card-container">
                 <div class="card">
-                    thiis is a sample card.
+                    this is a sample card.
                 </div>
                 <div class="card">
                     <img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=439511&type=card">
