--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>Nick's Portfolio</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <!-- Animate on Scroll -->
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+
 </head>
 
 <body>
-
+    <script>
+        AOS.init({
+            duration: 500,
+            easing: 'ease-in-sine',
+            delay: 500,
+            anchor: 'center-center',
+            disable: 'mobile'
+        });
+    </script>
     <nav id="navbar">
         <div class="nav-wrapper">
             <div class="nav-left-container">
@@ -33,8 +45,6 @@
             </div>
         </div>
     </nav>
-    <div> </div>
-    <div> </div>
     <!-- About Section -->
     <section id="about">
         <div class="about-left">
@@ -53,6 +63,16 @@
     <section id="portfolio">
         <div class="container">
             <h2>Portfolio</h2>
+            <div class="card-container">
+                <div class="project-container card" data-aos="fade-up">
+                    <a target="_blank" href="https://github.com/PlantedDC/">
+                        <img src="./img/planted.png"/>
+                    </a>
+                </div>
+
+                <div class="project-container" data-aos="fade-up">I'm</div>
+                <div class="project-container" data-aos="fade-up">Nick</div>
+            </div>
             <div class="card-container">
                 <div class="card">
                     this is a sample card.
